--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,11 @@
+/* inter font family */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+/* miama font family */
+@font-face {
+    font-family: miama;
+    src: url("../fonts/Miama.ttf");
+}
 
 * {
     margin: 0;
