--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -35,6 +35,7 @@ body {
     color: var(--base-content-secondary);
     letter-spacing: .5px;
     line-height: 1.625;
+    letter-spacing: 0.5px;
 }
 
 .primary-btn,
@@ -55,7 +56,7 @@ body {
 
 .secondary-btn {
     border: 2px solid var(--base-content);
-    background-color: var(--base-200);
+    background-color: transparent;
     color: var(--base-content);
 }
 
@@ -63,7 +64,7 @@ body {
 header {
     padding: 0 2rem;
     background: linear-gradient(to bottom, #111111, rgba(119, 119, 119, 0.2));
-    height: 715px;    
+    height: 715px;
     box-shadow: inset 0 -50px 100px #000000;
 }
 
@@ -104,7 +105,7 @@ header {
 
 .navbar-page-link.home {
     display: inline-block;
-    background-color: var(--primary );
+    background-color: var(--primary);
     padding: .5rem 1.25rem;
     border: none;
     border-radius: 50px;
@@ -114,7 +115,7 @@ header {
 /* navbar mobile screen styles */
 @media screen and (max-width: 576px) {
     header {
-        padding: 0 1rem;
+        padding: 0 1.25rem;
     }
 
     .navbar-icon {
@@ -122,7 +123,7 @@ header {
         color: var(--base-content);
         font-size: 1.25rem;
     }
-    
+
     .navbar-pages {
         display: none;
     }
@@ -178,9 +179,9 @@ header {
 
 .banner-img-card {
     padding: 1rem 1.5rem;
-    background-color:  rgba(48, 48, 48, 0.5);
+    background-color: rgba(48, 48, 48, 0.5);
     backdrop-filter: blur(10px);
-    border: none;
+    border: 1px solid rgba(255, 255, 255, 0.1);
     border-radius: .75rem;
     position: absolute;
 }
@@ -224,8 +225,86 @@ header {
     border-radius: 50%;
 }
 
+.fa-play {
+    display: none;
+}
+
 .tutorial-card h5 {
     font-size: 1.5rem;
     font-weight: 900;
     color: var(--base-content);
+}
+
+/* banner mobile screen styles */
+@media screen and (max-width: 576px) {
+    .banner {
+        margin: 50px auto 0;
+        flex-direction: column;
+    }
+
+    .tagline {
+        max-width: 285px;
+        font-size: 2.5rem;
+    }
+
+    .shape-text {
+        font-size: 5rem;
+    }
+
+    .banner-content .description {
+        max-width: 274px;
+    }
+
+    .banner-btn-container {
+        flex-wrap: wrap;
+    }
+
+    .primary-btn,
+    .secondary-btn {
+        max-width: 179px;
+        height: auto;
+        padding: 1rem;
+    }
+
+    .banner-img-container {
+        margin: 2.5rem 0 0;
+    }
+
+    .videos-card h5 {
+        font-size: 1.875rem;
+    }
+
+    .tutorial-card h5 {
+        font-size: 1.125rem;
+    }
+
+    .videos-card,
+    .tutorial-card {
+        padding: .9375rem 1.125rem;
+    }
+
+    .videos-card P,
+    .tutorial-card P {
+        font-size: .625rem;
+    }
+
+    .videos-card {
+        top: 3rem;
+        right: 1rem;
+    }
+
+    .tutorial-card {
+        left: 0;
+        bottom: 15rem;
+    }
+
+    .tutorial-circle {
+        display: grid;
+        place-items: center;
+    }
+
+    .fa-play {
+        display: block;
+        color: var(--primary-content);
+    }
 }
