Fixed the padding of the BMI calculator content for tablet screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -508,9 +508,11 @@ header {
 }
 
 /* bmi calculator default styles */
+
 .bmi-content {
     max-width: 671px;
     margin: 100px auto 100px;
+    padding: 0 2rem;
 }
 
 .bmi-calculator-background {
