--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -423,7 +423,7 @@ header {
 }
 
 .habit-card img {
-    width: 70%;
+    max-width: 150px;
     border: 2px solid var(--base-content-secondary);
     border-radius: 50%;
 }
